--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,47 +1,12 @@
 {
+  "cmake.ignoreCMakeListsMissing": true,
   "cSpell.words": [
-    "allprojects",
+    "appbar",
     "appspot",
     "auqn",
-    "buildlog",
-    "buildscript",
     "Dbmr",
-    "dotenv",
     "dphfio",
     "firebaseapp",
-    "googleusercontent",
-    "Intelli",
-    "kotlin",
-    "Qhgo",
-    "Schyler",
-    "smth",
-    "Symbolication"
-  ],
-  "cSpell.language": "en,nl,nl-NL,lorem,en-US,en-GB",
-  "cSpell.enableFiletypes": [
-    "Log",
-    "code-referencing",
-    "code-runner-output",
-    "code-text-binary",
-    "csv",
-    "dart",
-    "django-html",
-    "excel",
-    "gradle",
-    "gradle-build",
-    "gradle-kotlin-dsl",
-    "ignore",
-    "java-properties",
-    "jsx-tags",
-    "log",
-    "makefile",
-    "msbuild",
-    "pip-requirements",
-    "powershell",
-    "shellscript",
-    "snippets",
-    "sql",
-    "xaml",
-    "xml"
+    "smthQhgo"
   ]
 }
