--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_ui_auth: ^1.15.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
