--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^5.0.1
   intl: ^0.19.0
   fluttertoast: ^8.2.6
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
